--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
     "next": "13.3.0",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
