--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "next": "13.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
